--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Login - Câmbio Coin</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <script src="../JS/login.js"></script>
 
 </head>
@@ -23,10 +23,10 @@
             <br><br>
             <input type="submit" class="enviar" onclick="Enviar();" value="Concluido">
             <br><br>
-            <a href="/html/login.html">
+            <a href="login.html">
                 <p class="pa">Login</p>
             </a>
-            <a href="/index.html">
+            <a href="../index.html">
                 <p class="pa">Home</p>
             </a>
         </div>
