--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login - Câmbio Coin</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <script src="../JS/login.js"></script>
     
 </head>
@@ -19,7 +19,7 @@
             <input type="submit" class="enviar" onclick="Enviar();" value="Concluido">
             <br><br>
             <a href="cadastro.html"><p class="pa">Não possui cadastro?</p></a>
-            <a href="/index.html"><p class="pa">Home</p></a>
+            <a href="../index.html"><p class="pa">Home</p></a>
          </div>
     </form> 
 
