--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <ul class="nav-list">
       <li><a href="#">HOME</a></li>
-      <li><a href="../html/login.html">LOGIN</a></li>
+      <li><a href="html/login.html">LOGIN</a></li>
     </ul>
 
     <div class="rightNav">
