--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <h3>Álbuns em alta</h3>
 
   <div id="musica">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" >
-      <div class="carousel-indicators" >
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -50,37 +50,37 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
           aria-label="Slide 5"></button>
       </div>
-      <div class="carousel-inner" >
-        <div class="carousel-item active" >
-          <img src="img/lilnasx.JPG" class="d-block w-100" alt="...">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/lilnasx.JPG" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Lil Nas X</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/doja.JPG" class="d-block w-100" alt="...">
+          <img src="img/doja.JPG" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Doja Cat</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/dragons.JPG" class="d-block w-100" alt="...">
+          <img src="img/dragons.JPG" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Imagine Dragons</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/marilia.JPG" class="d-block w-100" alt="...">
+          <img src="img/marilia.JPG" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Marília Mendonça</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/pericles.jpg" class="d-block w-100" alt="...">
+          <img src="img/pericles.jpg" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Péricles</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
