--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <nav class="navbar background">
 
     <ul class="nav-list">
-      <li><a href="#">HOME</a></li>
-      <li><a href="html/login.html">LOGIN</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Música</a></li>
+      <li><a href="html/login.html">Login</a></li>
+      <li><a href="#">Sobre</a></li>
     </ul>
 
     <div class="rightNav">
@@ -34,7 +36,7 @@
     </div>
   </nav>
 
-  <h3>Álbuns em alta</h3>
+  <h3>Artistas em Destaque</h3>
 
   <div id="musica">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
