--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <ul class="nav-list">
       <li><a href="#">Home</a></li>
-      <li><a href="#">Música</a></li>
+      <li><a href="html/musica.html">Música</a></li>
       <li><a href="html/login.html">Login</a></li>
       <li><a href="#">Sobre</a></li>
     </ul>
