--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login - Câmbio Coin</title>
+    <title>Cadastro</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/login.css">
     <script src="../JS/login.js"></script>
