--- a/html/login.html
+++ b/html/login.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Login - Câmbio Coin</title>
+    <title>Login</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/login.css">
     <script src="../JS/login.js"></script>
