--- a/html/musica.html
+++ b/html/musica.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto</title>
+  <title>Músicas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/home.css">
@@ -21,7 +21,7 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="../html/musica.html">Música</a></li>
       <li><a href="../html/login.html">Login</a></li>
-      <li><a href="#">Sobre</a></li>
+      <li><a href="../html/sobre.html">Sobre</a></li>
     </ul>
 
     <div class="rightNav">
