--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/login.css">
     <script src="../JS/login.js"></script>
+    <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
     
 </head>
 <body>
