--- a/html/sobre.html
+++ b/html/sobre.html
@@ -19,7 +19,7 @@
 
     <ul class="nav-list">
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../html/musica.html">Música</a></li>
+      <li><a href="../html/musica.html">Músicas</a></li>
       <li><a href="../html/login.html">Login</a></li>
       <li><a href="../html/sobre.html">Sobre</a></li>
     </ul>
