--- a/html/musica.html
+++ b/html/musica.html
@@ -8,7 +8,7 @@
   <title>Músicas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/musica.css">
   <link rel="stylesheet" href="../css/barraNavegacao.css">
   <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
 
@@ -20,7 +20,7 @@
 
     <ul class="nav-list">
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../html/musica.html">Música</a></li>
+      <li><a href="../html/musica.html">Músicas</a></li>
       <li><a href="../html/login.html">Login</a></li>
       <li><a href="../html/sobre.html">Sobre</a></li>
     </ul>
@@ -40,7 +40,7 @@
   <h3>Descubra algo novo</h3>
 
   <div id="musica2">
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Supera</h5>
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/montero.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">MONTERO</h5>
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">My Ordinary Life</h5>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/vegas.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Vegas</h5>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/ransom.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ransom</h5>
@@ -86,7 +86,7 @@
   <h3>Recomendado</h3>
 
   <div id="musica2">
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Supera</h5>
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/montero.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">MONTERO</h5>
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">My Ordinary Life</h5>
@@ -110,7 +110,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/vegas.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Vegas</h5>
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/ransom.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ransom</h5>
@@ -134,7 +134,7 @@
   <h3>Em alta</h3>
 
   <div id="musica2">
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Supera</h5>
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/montero.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">MONTERO</h5>
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">My Ordinary Life</h5>
@@ -158,7 +158,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/vegas.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Vegas</h5>
@@ -166,7 +166,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="../img/ransom.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ransom</h5>
