--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <ul class="nav-list">
       <li><a href="#">Home</a></li>
-      <li><a href="html/musica.html">Música</a></li>
+      <li><a href="html/musica.html">Músicas</a></li>
       <li><a href="html/login.html">Login</a></li>
       <li><a href="html/sobre.html">Sobre</a></li>
     </ul>
 
     <div class="rightNav">
       <ul class="nav-list">
-        <li><img src="img/skymusic.png" class="img" width="100"></li>
+        <li><img src="img/skymusic.png" class="img" width="100px"></li>
       </ul>
     </div>
 
@@ -55,35 +55,35 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/lilnasx.JPG" alt="...">
+          <img src="img/lilnasx.JPG" alt="..." width="75%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Lil Nas X</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/doja.JPG" alt="...">
+          <img src="img/doja.JPG" alt="..." width="75%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Doja Cat</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/dragons.JPG" alt="...">
+          <img src="img/dragons.JPG" alt="..." width="75%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Imagine Dragons</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/marilia.JPG" alt="...">
+          <img src="img/marilia.JPG" alt="..." width="75%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Marília Mendonça</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/pericles.jpg" alt="...">
+          <img src="img/pericles.jpg" alt="..." width="75%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Péricles</h5>
             <a class="btn btn-primary" href="#" role="button">PLAY</a>
@@ -106,7 +106,7 @@
   <h3>Músicas favoritas</h3>
 
   <div id="musica2">
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="img/pericles2.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Supera</h5>
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="img/montero.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">MONTERO</h5>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="img/myordinarylide.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">My Ordinary Life</h5>
@@ -130,7 +130,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="img/vegas.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Vegas</h5>
@@ -138,7 +138,7 @@
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 18rem;">
+    <div id="card" class="card" style="width: 17%;">
       <img src="img/ransom.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ransom</h5>
@@ -147,7 +147,6 @@
     </div>
 
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
