--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Cadastro</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
     <script src="../JS/login.js"></script>
     <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
 
