--- a/html/musica.html
+++ b/html/musica.html
@@ -37,45 +37,45 @@
     </div>
   </nav>
 
-  <h3>Descubra algo novo</h3>
+  <h3>Lançamentos</h3>
 
   <div id="musica2">
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
+      <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Supera</h5>
+        <h5 class="card-title">Assaltante</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/montero.jpg" class="card-img-top" alt="...">
+      <img src="../img/lancamentos/FoiBom.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">MONTERO</h5>
+        <h5 class="card-title">Foi bom, mas não diferente</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
+      <img src="../img/lancamentos/HajaColirio.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">My Ordinary Life</h5>
+        <h5 class="card-title">Haja colírio</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/vegas.jpg" class="card-img-top" alt="...">
+      <img src="../img/lancamentos/rojao.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Vegas</h5>
+        <h5 class="card-title">Rojão</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/ransom.jpg" class="card-img-top" alt="...">
+      <img src="../img/lancamentos/sereia.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Ransom</h5>
+        <h5 class="card-title">Sereia</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
@@ -87,41 +87,41 @@
 
   <div id="musica2">
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
+      <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Supera</h5>
+        <h5 class="card-title">Arranhão</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/montero.jpg" class="card-img-top" alt="...">
+      <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">MONTERO</h5>
+        <h5 class="card-title">Bloqueado</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
+      <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">My Ordinary Life</h5>
+        <h5 class="card-title">Mal feito</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/vegas.jpg" class="card-img-top" alt="...">
+      <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Vegas</h5>
+        <h5 class="card-title">Malvadão 3</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/ransom.jpg" class="card-img-top" alt="...">
+      <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Ransom</h5>
+        <h5 class="card-title">Molhando o volante</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
@@ -135,41 +135,41 @@
 
   <div id="musica2">
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/pericles2.JPG" class="card-img-top" alt="...">
+      <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Supera</h5>
+        <h5 class="card-title">Assunto delicado</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/montero.jpg" class="card-img-top" alt="...">
+      <img src="../img/alta/Casei.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">MONTERO</h5>
+        <h5 class="card-title">Casei com a putaria</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/myordinarylide.jpeg" class="card-img-top" alt="...">
+      <img src="../img/alta/GostoAssim.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">My Ordinary Life</h5>
+        <h5 class="card-title">Eu gosto assim</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/vegas.jpg" class="card-img-top" alt="...">
+      <img src="../img/alta/PoesiaAcustica.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Vegas</h5>
+        <h5 class="card-title">Poesia acústica 13</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
 
     <div id="card" class="card" style="width: 17%;">
-      <img src="../img/ransom.jpg" class="card-img-top" alt="...">
+      <img src="../img/alta/sofrencia.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Ransom</h5>
+        <h5 class="card-title">Sofrência remix</h5>
         <a href="#" class="btn btn-primary">PLAY</a>
       </div>
     </div>
