--- a/html/sobre.html
+++ b/html/sobre.html
@@ -36,6 +36,8 @@
     </div>
   </nav>
 
+  <p class="sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quibusdam reiciendis itaque magni eveniet. Necessitatibus nihil explicabo quis libero tempore aspernatur animi ab minima, illo aperiam, ad alias aliquam velit iure id vitae cumque laudantium voluptate possimus. Repellat impedit tempora consequuntur quo sapiente, non odit blanditiis dolores inventore ipsum consequatur animi incidunt maxime dignissimos dolor voluptatem. Saepe laborum id tenetur ducimus similique quas beatae adipisci deleniti asperiores. Recusandae, facere! Fugit autem numquam ullam itaque consequatur architecto sunt saepe modi nihil. Nesciunt accusantium explicabo culpa laboriosam quae magni minima nostrum atque? Odio fuga deserunt unde enim aspernatur doloribus tempore iste officia hic explicabo. Repudiandae rerum inventore harum laudantium. Veritatis a blanditiis aut non consequuntur. Porro, natus architecto. Cumque laudantium, doloribus facilis possimus perspiciatis commodi voluptatum impedit corrupti eius eveniet quibusdam magnam. Perspiciatis expedita quia sapiente explicabo est eligendi obcaecati, nisi voluptate minima culpa, vero esse? Velit quos eius voluptatibus, blanditiis quae dicta at quam sint nisi beatae asperiores fugiat pariatur inventore nobis cumque quasi repudiandae voluptatem eos? Voluptate totam maxime mollitia sint nemo quod aliquid nobis, debitis officiis sed placeat repudiandae cum quae ducimus autem! Id eos corrupti iusto ab quis deserunt voluptatibus repellat odio similique quaerat autem, impedit aliquid suscipit.</p>
+
 
 
 
