--- a/html/musica.html
+++ b/html/musica.html
@@ -46,6 +46,17 @@
     </ul>
   </nav>
 
+  <nav class="navbar background">
+    <ul class="nav-list">
+      
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="../img/skymusic.png" width="100px">
+        </div>
+      </div>
+    </ul>
+  </nav>
+
   <h3>Lançamentos</h3>
 
   <div class="row" id="musica2">
