--- a/html/sobre.html
+++ b/html/sobre.html
@@ -45,6 +45,17 @@
     </ul>
   </nav>
 
+  <nav class="navbar background">
+    <ul class="nav-list">
+      
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="../img/skymusic.png" width="100px">
+        </div>
+      </div>
+    </ul>
+  </nav>
+
   <div class="card" >
     <div class="card-body">
       <h5 class="card-title">Sobre SkyMusic</h5><br>
@@ -55,7 +66,7 @@
 
   <div class="card" id="card1">
     <div class="card-body">
-      <img src="../img/skymusic.png" alt="">
+      <img class="logo" src="../img/skymusic.png" alt="">
     </div>
   </div>
 
