--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/cadastro.css">
     <script src="../JS/login.js"></script>
-    <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
+    <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
 
 </head>
 
@@ -24,11 +24,11 @@
             <br><br>
             <input type="submit" class="enviar" onclick="Enviar();" value="Concluido">
             <br><br>
-            <a href="login.html">
-                <p class="pa">Login</p>
+            <a class="link" href="login.html">
+                Login
             </a>
-            <a href="../index.html">
-                <p class="pa">Home</p>
+            <a class="link" href="../index.html">
+                Home
             </a>
         </div>
     </form>
