--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <form name="login">
-            <div>
+            <div class="tabela">
             <h1 id="login">Login</h1>
             <input type="email" id="loginid" placeholder="Digite seu email" required name="email">
             <br> <br>
@@ -19,8 +19,8 @@
             <br><br>
             <input type="submit" class="enviar" onclick="Enviar();" value="Concluido">
             <br><br>
-            <a href="cadastro.html"><p class="pa">Não possui cadastro?</p></a>
-            <a href="../index.html"><p class="pa">Home</p></a>
+            <a class="link" href="cadastro.html">Não possui cadastro?</a><br>
+            <a class="link" href="../index.html">Home</a>
          </div>
     </form> 
 
