--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
       
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="../index.html">Home</a>
+          <a class="link" href="/index.html">Home</a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="../html/musica.html">Músicas</a>
+          <a class="link" href="/html/musica.html">Músicas</a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="../html/login.html">Login</a>
+          <a class="link" href="/html/login.html">Login</a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="../html/sobre.html">Sobre</a>
+          <a class="link" href="/html/sobre.html">Sobre</a>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
       
       <div class="row">
         <div class="col-sm-2">
-          <img src="../img/skymusic.png" width="100px">
+          <img src="/img/skymusic.png" width="100px">
         </div>
       </div>
     </ul>
