--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <nav class="navbar background">
     <ul class="nav-list">
-      
+
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="/index.html">Home</a>
+          <a class="link" href="#">Home</a>
         </div>
       </div>
 
@@ -48,7 +48,7 @@
 
   <nav class="navbar background">
     <ul class="nav-list">
-      
+
       <div class="row">
         <div class="col-sm-2">
           <img src="/img/skymusic.png" width="100px">
