--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/barraNavegacao.css">
-  <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
+  <link rel="shortcut icon" type="imagem/x-icon" href="/img/skymusic.png" />
 
 </head>
 
@@ -21,7 +21,7 @@
 
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="#">Home</a>
+          <a class="link" href="/index.html">Home</a>
         </div>
       </div>
 
