--- a/html/sobre.html
+++ b/html/sobre.html
@@ -20,7 +20,7 @@
       
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="">Home</a>
+          <a class="link" href="../index.html">Home</a>
         </div>
       </div>
 
