--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="row">
         <div class="col-sm-2">
-          <a class="link" href="">Home</a>
+          <a class="link" href="../SkyMusic/index.html">Home</a>
         </div>
       </div>
 
