--- a/html/sobre.html
+++ b/html/sobre.html
@@ -60,7 +60,7 @@
     <div class="card-body">
       <h5 class="card-title">Sobre SkyMusic</h5><br>
       
-      <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt deserunt quibusdam obcaecati quasi? Distinctio temporibus sequi, aliquam veniam atque libero et unde soluta quidem cum cupiditate, sed minima dicta? Nobis tempore nesciunt natus cupiditate sint in maiores delectus? Architecto accusantium itaque optio beatae, incidunt reiciendis voluptas corrupti dolorem. Voluptatibus expedita veritatis nostrum. Velit animi maiores nemo. Ex totam enim consequatur. Illum ad dolore nulla quod expedita ipsum debitis quaerat adipisci at perferendis praesentium consequatur vero dicta, nobis nemo totam a aliquam harum eos cumque? Sed inventore placeat reiciendis molestiae, excepturi perferendis. Consectetur reprehenderit ratione quidem suscipit ipsa hic saepe earum!</p>
+      <p class="card-text">Este é o Projeto de Conclusão de semestre, desenvolvido pelos alunos da UNINOVE Memorial. A proposta do projeto foi desenvolver um site de música utilizando HTML, CSS e JS. Foram usados serviços do Firebase.</p>
     </div>
   </div>
 
