--- a/html/musica.html
+++ b/html/musica.html
@@ -242,13 +242,13 @@
       <div class="player-controle">
         <ul>
           <li>
-            <a class="player"><img src="/icons/play.png" alt="play" width="31px"></a>
+            <a class="player"><img src="../icons/play.png" alt="play" width="31px"></a>
           </li>
           <li>
-            <a class="palse"><img src="/icons/palse.png" alt="palse" width="38px"></a>
+            <a class="palse"><img src="../icons/palse.png" alt="palse" width="38px"></a>
           </li>
           <li>
-            <a class="proxima"><img src="/icons/proximo.png" alt="proximo" width="33px"></a>
+            <a class="proxima"><img src="../icons/proximo.png" alt="proximo" width="33px"></a>
           </li>
           <div class="barra">
           <li class="inicio">0:00</li>
@@ -265,10 +265,10 @@
     <div class="informacao">
       <ul>
         <li>
-          <a href="/html/sobre.html">Sobre</a>
+          <a href="../html/sobre.html">Sobre</a>
         </li>
         <li>
-          <a href="/html/musica.html">Musicas</a>
+          <a href="../html/musica.html">Musicas</a>
         </li>
       </ul>
     </div>
