--- a/html/musica.html
+++ b/html/musica.html
@@ -10,7 +10,7 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/musica.css">
   <link rel="stylesheet" href="../css/barraNavegacao.css">
-  <link rel="stylesheet" href="/css/player.css">
+  <link rel="stylesheet" href="../css/player.css">
   <script
   src="https://code.jquery.com/jquery-3.6.1.min.js"
   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
