--- a/html/musica.html
+++ b/html/musica.html
@@ -74,7 +74,7 @@
         <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assaltante</h5>
-          <audio id="audio1"  src="/musica/Meu Número (320 kbps).mp3"></audio>
+          <audio id="audio1"  src="../musica/Meu Número (320 kbps).mp3"></audio>
           <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
@@ -86,7 +86,7 @@
         <div class="card-body">
           <h5 class="card-title">Meu número </h5>
           <div class=""></div>
-          <audio id="audio2" src="/musica/audio.mp3"></audio>
+          <audio id="audio2" src="../musica/audio.mp3"></audio>
           <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
