--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -1,26 +1,3 @@
-<?php
-class cadastro {
-    private $nome;
-    private $email;
-    private $password;
-
-   public function getInfo(){
-    
-        return $this->nome;
-    }
-
-    function informaCao(nome, email, password){
-        $this->name = $_GET["nomeid"];
-        $this->email = $_GET["loginid"];
-        $this->password = $_GET["senhaid"];
-
-        return $this->informaCao;
-}
-
-?>
-
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -30,6 +7,8 @@ class cadastro {
     <link rel="stylesheet" href="../css/cadastro.css">
     <script src="../JS/login.js"></script>
     <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
+    <script src="../js/cadastro.js"></script>
+    <script src="../js/dados.js"></script>
 
 </head>
 
